syntax = "proto3";

package auth;

option go_package = "internal/transport/grpc";

service AuthService {
  rpc CheckAccess(CheckAccessRequest) returns (CheckAccessResponse);
}

message CheckAccessRequest {
  string token = 1;
  repeated string required_roles = 2;
}

message CheckAccessResponse {
  bool allowed = 1;
  string user_id = 2;
  string error = 3;
} 